--- a/style.css
+++ b/style.css
@@ -57,15 +57,29 @@
 
     h1 {
         color: var(--font-h1color);
+        font-size: 24px;
+        font-weight: 600;
+        margin: 1rem 1rem 0 1rem;
     }
 
     h2 {
         color: var(--font-h2color);
+        font-size: 13px;
+        font-weight: 600;
+        margin: 0.2rem 1rem 0 1rem;
+    }
+
+    p {
+        color: var(--font-pcolor);
+        font-size: 13px;
+        margin: 1.5rem 1rem 0 1rem;
     }
 
     a {
         color: var(--font-anchorcolor);
         text-decoration: none;
+        font-size: 14px;
+        margin: 0.5rem 1rem;
     }
 
     a:hover {
@@ -83,25 +97,67 @@
         background-color: var(--layout-backgroundcolor);
         margin: 0;
         padding: 0;
+        width: 100vw;
+        height: 98vh;
+    }
+
+    main {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: calc(100 / 16 * 1rem);
+        width: 100%;
+        height: 100%;
     }
 
     .card {
         background-color: var(--layout-cardcolor);
         border-radius: 10px;
-        padding: 20px;
-        margin: 20px;
+        padding: calc(42 / 16 * 1rem);
+        margin: calc(20 / 16 * 1rem);
+        width: 23%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .btn-section {
+        margin: calc(12 / 16 * 1rem);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        margin-bottom: 0;
     }
 
     .card-button {
         background-color: var(--layout-cardbuttoncolor);
         color: var(--font-anchorcolor);
         border: none;
-        padding: 10px 15px;
-        border-radius: 4px;
+        padding: calc(15 / 16 * 1rem);
+        margin-bottom: calc(14 / 16 * 1rem);
+        width: 100%;
+        border-radius: 7px;
         cursor: pointer;
+        text-align: center;
     }
+
+    .card-button:last-child {
+        margin-bottom: 0;
+    }  
 
     .card-button:hover {
         opacity: 0.8;
+    }
+
+    img {
+        max-width: calc(85 / 16 * 1rem);
+        height: auto;
+        border-radius: 100px;
+    }
+
+    footer {
+        height: 2%;
     }
 }
