--- a/style.css
+++ b/style.css
@@ -82,10 +82,6 @@
         font-weight: 700;
         margin: 0.5rem 1rem;
     }
-
-    a:hover {
-        text-decoration: underline;
-    }
 }
 
 @layer layout {
@@ -144,8 +140,14 @@
         margin: 0.5rem 0.5rem 0.5rem 0.5rem;
         width: 100%;
         border-radius: 7px;
-        cursor: pointer;
+        cursor: url(/assets/images/pointer-cursor-30.png), auto;
         text-align: center;
+    }
+
+    .card-button:active {
+        background-color: var(--color-green);
+        color: var(--layout-backgroundcolor);
+        cursor: url(/assets/images/pointer-cursor-30.png), auto;
     }
 
     .card-button:last-child {
