--- a/style.css
+++ b/style.css
@@ -60,6 +60,10 @@
         font-size: 24px;
         font-weight: 600;
         margin: 1rem 1rem 0 1rem;
+
+        @media (width <= 400px) {
+            font-size: 20px;
+        }
     }
 
     h2 {
@@ -67,12 +71,20 @@
         font-size: 13px;
         font-weight: 600;
         margin: 0.2rem 1rem 0 1rem;
+
+        @media (width <= 400px) {
+            font-size: 10px;
+        }
     }
 
     p {
         color: var(--font-pcolor);
         font-size: 13px;
         margin: 1.5rem 1rem 0 1rem;
+
+        @media (width <= 400px) {
+            font-size: 10px;
+        }
     }
 
     a {
@@ -81,6 +93,10 @@
         font-size: 14px;
         font-weight: 700;
         margin: 0.5rem 1rem;
+
+        @media (width <= 400px) {
+            font-size: 12px;
+        }
     }
 }
 
@@ -102,29 +118,56 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: calc(100 / 16 * 1rem);
+        padding: calc(100 / 16 * 1rem); /* 100px */
         width: 100%;
         height: 100%;
+
+        @media (width <= 400px) {
+            padding: calc(50 / 16 * 1rem); /* 50px */; 
+        }
     }
 
     section.card {
         height: 610px;
+
+        @media (width <= 768px) {
+            height: calc(550 / 16 * 1rem); /* 550px */; 
+        }
+
+        @media (width <= 400px) {
+            width:  calc(250 / 16 * 1rem); /* 250px */; 
+            height:  calc(405 / 16 * 1rem); /* 405px */; 
+            
+        }
     }
 
     .card {
         background-color: var(--layout-cardcolor);
         border-radius: 10px;
-        padding: calc(35 / 16 * 1rem);
-        margin: calc(20 / 16 * 1rem);
-        width: 23%;
-        height: 100%;
+        padding: calc(30 / 16 * 1rem); /* 30px */
+        margin: calc(20 / 16 * 1rem); /* 20px */
+        width: calc(380 / 16 * 1rem); /* 380px */
         display: flex;
         flex-direction: column;
         align-items: center;
+
+        @media (width <= 768px) {
+            height: calc(300 / 16 * 1rem); /* 300px */; 
+            width: calc(330 / 16 * 1rem); /* 330px */;
+            margin: calc(5 / 16 * 1rem); /* 5px */
+            padding: calc(25 / 16 * 1rem); /* 25px */
+        }
+
+        @media (width <= 400px) {
+            height: calc(300 / 16 * 1rem); /* 300px */; 
+            width: calc(330 / 16 * 1rem); /* 330px */;
+            margin: calc(5 / 16 * 1rem); /* 5px */
+            padding: calc(15 / 16 * 1rem); /* 15px */
+        }
     }
 
     .btn-section {
-        margin: calc(12 / 16 * 1rem);
+        margin: calc(12 / 16 * 1rem); /* 12px */
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -136,12 +179,19 @@
         background-color: var(--layout-cardbuttoncolor);
         color: var(--font-anchorcolor);
         border: none;
-        padding: calc(15 / 16 * 1rem);
+        padding: calc(10 / 16 * 1rem); /* 10px */
         margin: 0.5rem 0.5rem 0.5rem 0.5rem;
         width: 100%;
         border-radius: 7px;
         cursor: url(/assets/images/pointer-cursor-30.png), auto;
         text-align: center;
+
+        @media (width <= 400px) {
+            height: calc(30 / 16 * 1rem); /* 30px */; 
+            width: 100%;
+            margin: calc(5 / 16 * 1rem); /* 5px */
+            padding: calc(5 / 16 * 1rem); /* 5px */
+        }
     }
 
     .card-button:active {
@@ -159,9 +209,14 @@
     }
 
     img {
-        max-width: calc(85 / 16 * 1rem);
+        max-width: calc(85 / 16 * 1rem); /* 85px */
         height: auto;
         border-radius: 100px;
+
+        @media (width <= 400px) {
+            height: calc(60 / 16 * 1rem); /* 60px */; 
+            width: calc(60 / 16 * 1rem); /* 60px */; 
+        }
     }
 
     footer {
