--- a/style.css
+++ b/style.css
@@ -220,6 +220,14 @@
     }
 
     footer {
+        text-align: center;
         height: 3%;
+        font-size: 10px;
+        width: 100vw;
+        > a { 
+            font-size: 10px;
+            margin: 0;
+            color: hsl(228, 45%, 44%);
+        }
     }
 }
